--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "latest",
     "class-variance-authority": "^0.7.1",
+    "cloc": "^2.4.0-cloc",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "latest",
