--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "build": "next build",
     "start": "next start -p 3001",
     "lint": "next lint",
-    "prisma:seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+    "prisma:seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@auth/core": "latest",
-    "@auth/prisma-adapter": "latest",
+    "@auth/core": "^0.19.0",
+    "@auth/prisma-adapter": "^1.0.12",
     "@google/generative-ai": "latest",
     "@hookform/resolvers": "^3.9.1",
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "^5.9.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -43,8 +44,8 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@react-three/drei": "^10.0.6",
-    "@react-three/fiber": "^9.1.2",
+    "@react-three/drei": "^10.0.0",
+    "@react-three/fiber": "^8.15.12",
     "@types/bcrypt": "^5.0.2",
     "ai": "latest",
     "autoprefixer": "^10.4.20",
@@ -60,10 +61,10 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
-    "next-auth": "latest",
+    "next-auth": "4.24.11",
     "next-themes": "^0.4.4",
     "nodemailer": "latest",
-    "prisma": "^6.5.0",
+    "prisma": "^5.9.0",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
