--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "type": "module",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "db:reset": "rimraf .next && rimraf prisma/dev.db && npx prisma migrate reset --force",
+    "build": "npx prisma generate && npx prisma migrate deploy && node prisma/production-seed.js && next build",
     "start": "next start -p 3001",
     "lint": "next lint",
-    "prisma:seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts",
-    "postinstall": "prisma generate"
+    "prisma:seed": "node prisma/seed.js",
+    "postinstall": "npx prisma generate"
   },
   "dependencies": {
     "@auth/core": "^0.19.0",
     "@auth/prisma-adapter": "^1.0.12",
     "@google/generative-ai": "latest",
     "@hookform/resolvers": "^3.9.1",
-    "@prisma/client": "^5.9.0",
+    "@prisma/client": "5.22.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -88,11 +89,13 @@
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8",
+    "prisma": "5.22.0",
+    "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "typescript": "^5"
   },
   "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+    "seed": "node prisma/seed.js"
   }
 }
