--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "my-v0-project",
+  "name": "ayurveda-ai",
   "version": "0.1.0",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "node start.js",
     "dev:next": "next dev",
-    "db:reset": "rimraf .next && rimraf prisma/dev.db && npx prisma migrate reset --force",
+    "db:reset": "npx rimraf .next && npx rimraf prisma/dev.db && npx prisma migrate reset --force",
     "build": "npx prisma generate && npx prisma migrate deploy && node prisma/production-seed.js && next build",
     "start": "next start -p 3001",
     "lint": "next lint",
@@ -47,20 +47,14 @@
     "@radix-ui/react-toggle": "^1.1.1",
     "@radix-ui/react-toggle-group": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
-    "@react-three/drei": "^10.0.0",
-    "@react-three/fiber": "^8.15.12",
     "@types/bcrypt": "^5.0.2",
-    "ai": "latest",
     "autoprefixer": "^10.4.20",
     "bcrypt": "^5.1.1",
-    "bcryptjs": "latest",
     "class-variance-authority": "^0.7.1",
-    "cloc": "^2.4.0-cloc",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "latest",
     "embla-carousel-react": "8.5.1",
-    "framer-motion": "^10.16.5",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
@@ -77,7 +71,6 @@
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.175.0",
     "vaul": "^0.9.6",
     "zod": "latest"
   },
@@ -95,9 +88,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "postcss": "^8",
     "prisma": "5.22.0",
-    "rimraf": "^6.0.1",
     "tailwindcss": "^3.4.17",
-    "ts-node": "^10.9.2",
     "typescript": "^5"
   },
   "prisma": {
